--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -1,2 +1,7 @@
 <!-- Javascript -->
+<script src="/public/javascripts/vendor/jquery.js"></script>
+
+<!-- Manuals frontend js -->
+<script src="https://assets.digital.cabinet-office.gov.uk/manuals-frontend/application-8d0b11a47f3b876281ab1b30ffb1b289.js">
+
 <script src="/public/javascripts/application.js"></script>
